--- a/src/sample/edit_logistics.fxml
+++ b/src/sample/edit_logistics.fxml
@@ -17,7 +17,7 @@
       </Text>
       <ImageView fitHeight="87.0" fitWidth="101.0" layoutX="10.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../Images/logo.jpeg" />
+            <Image url="@Images/logo.jpeg" />
          </image>
       </ImageView>
       <TextField layoutX="65.0" layoutY="129.0" prefHeight="31.0" prefWidth="202.0" promptText="Staff ID">
