--- a/src/ui/inventory/add_item.fxml
+++ b/src/ui/inventory/add_item.fxml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -10,51 +8,28 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Text layoutX="240.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EDIT STAFF">
+      <Text layoutX="240.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ADD ITEM">
          <font>
             <Font name="Segoe UI" size="25.0" />
          </font>
       </Text>
       <ImageView fitHeight="87.0" fitWidth="101.0" layoutX="10.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@Images/logo.jpeg" />
+            <Image url="@../Images/logo.jpeg" />
          </image>
       </ImageView>
-      <TextField layoutX="67.0" layoutY="124.0" prefHeight="31.0" prefWidth="202.0" promptText="Frst Name">
+      <TextField layoutX="67.0" layoutY="124.0" prefHeight="31.0" prefWidth="202.0" promptText="Type">
          <font>
             <Font size="15.0" />
          </font>
       </TextField>
-      <TextField layoutX="336.0" layoutY="124.0" prefHeight="30.0" prefWidth="202.0" promptText="Surname">
+      <TextField layoutX="336.0" layoutY="124.0" prefHeight="30.0" prefWidth="202.0" promptText="Name">
          <font>
             <Font size="15.0" />
          </font>
       </TextField>
-      <TextField layoutX="67.0" layoutY="175.0" prefHeight="31.0" prefWidth="202.0" promptText="Salary">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </TextField>
-      <TextField layoutX="336.0" layoutY="175.0" prefWidth="202.0" promptText="Status">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </TextField>
-      <MenuButton layoutX="67.0" layoutY="248.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="202.0" text="Position">
-         <items>
-            <MenuItem mnemonicParsing="false" text="Barista" />
-            <MenuItem mnemonicParsing="false" text="Cashier" />
-            <MenuItem mnemonicParsing="false" text="Sales" />
-            <MenuItem mnemonicParsing="false" text="Social Media" />
-            <MenuItem mnemonicParsing="false" text="Operations" />
-         </items>
-         <font>
-            <Font name="Segoe UI" size="15.0" />
-         </font>
-      </MenuButton>
       <Button layoutX="372.0" layoutY="357.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="166.0" style="-fx-background-color: #000000;" text="DONE" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
@@ -65,5 +40,10 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Button>
+      <TextField layoutX="67.0" layoutY="185.0" prefHeight="31.0" prefWidth="202.0" promptText="Stored">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </TextField>
    </children>
 </Pane>
