--- a/src/ui/staff/edit_staff.fxml
+++ b/src/ui/staff/edit_staff.fxml
@@ -10,28 +10,51 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Text layoutX="240.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EDIT SALES">
+      <Text layoutX="240.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EDIT STAFF">
          <font>
             <Font name="Segoe UI" size="25.0" />
          </font>
       </Text>
       <ImageView fitHeight="87.0" fitWidth="101.0" layoutX="10.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@Images/logo.jpeg" />
+            <Image url="@../Images/logo.jpeg" />
          </image>
       </ImageView>
-      <TextField layoutX="67.0" layoutY="124.0" prefHeight="31.0" prefWidth="202.0" promptText="Staff ID">
+      <TextField layoutX="67.0" layoutY="124.0" prefHeight="31.0" prefWidth="202.0" promptText="Frst Name">
          <font>
             <Font size="15.0" />
          </font>
       </TextField>
-      <TextField layoutX="336.0" layoutY="124.0" prefHeight="30.0" prefWidth="202.0" promptText="Customer Name">
+      <TextField layoutX="336.0" layoutY="124.0" prefHeight="30.0" prefWidth="202.0" promptText="Surname">
          <font>
             <Font size="15.0" />
          </font>
       </TextField>
+      <TextField layoutX="67.0" layoutY="175.0" prefHeight="31.0" prefWidth="202.0" promptText="Salary">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </TextField>
+      <TextField layoutX="336.0" layoutY="175.0" prefWidth="202.0" promptText="Status">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </TextField>
+      <MenuButton layoutX="67.0" layoutY="248.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="202.0" text="Position">
+         <items>
+            <MenuItem mnemonicParsing="false" text="Barista" />
+            <MenuItem mnemonicParsing="false" text="Cashier" />
+            <MenuItem mnemonicParsing="false" text="Sales" />
+            <MenuItem mnemonicParsing="false" text="Social Media" />
+            <MenuItem mnemonicParsing="false" text="Operations" />
+         </items>
+         <font>
+            <Font name="Segoe UI" size="15.0" />
+         </font>
+      </MenuButton>
       <Button layoutX="372.0" layoutY="357.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="166.0" style="-fx-background-color: #000000;" text="DONE" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
@@ -42,19 +65,5 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Button>
-      <TextField layoutX="336.0" layoutY="185.0" prefHeight="31.0" prefWidth="202.0" promptText="Total Sales">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </TextField>
-      <MenuButton layoutX="67.0" layoutY="188.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="202.0" text="Sales Type">
-        <items>
-          <MenuItem mnemonicParsing="false" text="Action 1" />
-          <MenuItem mnemonicParsing="false" text="Action 2" />
-        </items>
-         <font>
-            <Font size="15.0" />
-         </font>
-      </MenuButton>
    </children>
 </Pane>
