--- a/src/ui/staff/staff.fxml
+++ b/src/ui/staff/staff.fxml
@@ -1,23 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.staff.staffController">
    <top>
       <AnchorPane prefHeight="115.0" prefWidth="1280.0" BorderPane.alignment="CENTER">
          <children>
             <ImageView fitHeight="97.0" fitWidth="106.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@Images/logo.jpeg" />
+                  <Image url="@../Images/logo.jpeg" />
                </image>
             </ImageView>
             <Text fill="#5b3815" layoutX="103.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DASHBOARD">
@@ -30,13 +24,13 @@
       </AnchorPane>
    </top>
    <left>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="200.0" prefWidth="193.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
          <children>
             <Pane prefHeight="140.0" prefWidth="203.0" style="-fx-background-color: #b89d82;">
                <children>
                   <ImageView fitHeight="81.0" fitWidth="77.0" layoutX="61.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@Images/avatar.png" />
+                        <Image url="@../Images/avatar.png" />
                      </image>
                   </ImageView>
                   <Text fill="WHITE" layoutX="55.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Admin Panel">
@@ -51,74 +45,74 @@
                   </Text>
                </children>
             </Pane>
-            <Button alignment="TOP_CENTER" layoutX="2.0" layoutY="231.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="200.0" style="-fx-background-color: white;" text="SALES">
+            <Button fx:id="sales" alignment="TOP_CENTER" layoutX="2.0" layoutY="231.0" mnemonicParsing="false" onAction="#clickSales" prefHeight="25.0" prefWidth="200.0" style="-fx-background-color: white;" text="SALES">
                <font>
                   <Font name="Book Antiqua Bold" size="20.0" />
                </font>
                <graphic>
                   <ImageView accessibleRole="BUTTON" fitHeight="41.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@Images/sales.png" />
+                        <Image url="@../Images/sales.png" />
                      </image>
                   </ImageView>
                </graphic>
             </Button>
-            <Button alignment="TOP_CENTER" layoutX="2.0" layoutY="154.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="200.0" style="-fx-background-color: white;" text="STAFF">
+            <Button fx:id="staff" alignment="TOP_CENTER" layoutX="2.0" layoutY="154.0" mnemonicParsing="false" onAction="#clickStaff" prefHeight="25.0" prefWidth="200.0" style="-fx-background-color: white;" text="STAFF">
                <font>
                   <Font name="Book Antiqua Bold" size="20.0" />
                </font>
                <graphic>
                   <ImageView accessibleRole="BUTTON" fitHeight="41.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@Images/staff.png" />
+                        <Image url="@../Images/staff.png" />
                      </image>
                   </ImageView>
                </graphic>
             </Button>
-            <Button alignment="TOP_CENTER" layoutX="2.0" layoutY="313.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="200.0" style="-fx-background-color: white;" text="INVENTORY">
+            <Button fx:id="inventory" alignment="TOP_CENTER" layoutX="2.0" layoutY="313.0" mnemonicParsing="false" onAction="#clickInventory" prefHeight="25.0" prefWidth="200.0" style="-fx-background-color: white;" text="INVENTORY">
                <font>
                   <Font name="Book Antiqua Bold" size="20.0" />
                </font>
                <graphic>
                   <ImageView accessibleRole="BUTTON" fitHeight="41.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@Images/inventory.png" />
+                        <Image url="@../Images/inventory.png" />
                      </image>
                   </ImageView>
                </graphic>
             </Button>
-            <Button alignment="TOP_CENTER" layoutX="2.0" layoutY="392.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="200.0" style="-fx-background-color: white;" text="HISTORY">
+            <Button fx:id="history" alignment="TOP_CENTER" layoutX="2.0" layoutY="392.0" mnemonicParsing="false" onAction="#clickHistory" prefHeight="25.0" prefWidth="200.0" style="-fx-background-color: white;" text="HISTORY">
                <font>
                   <Font name="Book Antiqua Bold" size="20.0" />
                </font>
                <graphic>
                   <ImageView accessibleRole="BUTTON" fitHeight="41.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@Images/history.png" />
+                        <Image url="@../Images/history.png" />
                      </image>
                   </ImageView>
                </graphic>
             </Button>
-            <Button alignment="TOP_CENTER" layoutX="2.0" layoutY="467.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="200.0" style="-fx-background-color: white;" text="FINANCES">
+            <Button fx:id="finances" alignment="TOP_CENTER" layoutX="2.0" layoutY="467.0" mnemonicParsing="false" onAction="#clickFinances" prefHeight="25.0" prefWidth="200.0" style="-fx-background-color: white;" text="FINANCES">
                <font>
                   <Font name="Book Antiqua Bold" size="20.0" />
                </font>
                <graphic>
                   <ImageView accessibleRole="BUTTON" fitHeight="41.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@Images/finance.png" />
+                        <Image url="@../Images/finance.png" />
                      </image>
                   </ImageView>
                </graphic>
             </Button>
-            <Button alignment="TOP_CENTER" layoutX="2.0" layoutY="543.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="200.0" style="-fx-background-color: white;" text="LOGISTICS">
+            <Button fx:id="logistics" alignment="TOP_CENTER" layoutX="2.0" layoutY="543.0" mnemonicParsing="false" onAction="#clickLogistics" prefHeight="25.0" prefWidth="200.0" style="-fx-background-color: white;" text="LOGISTICS">
                <font>
                   <Font name="Book Antiqua Bold" size="20.0" />
                </font>
                <graphic>
                   <ImageView accessibleRole="BUTTON" fitHeight="41.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@Images/logistics.png" />
+                        <Image url="@../Images/logistics.png" />
                      </image>
                   </ImageView>
                </graphic>
@@ -129,17 +123,19 @@
    <center>
       <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #2b2b2b;" BorderPane.alignment="CENTER">
          <children>
-            <Text fill="WHITE" layoutX="49.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="INVENTORY">
+            <Text fill="WHITE" layoutX="49.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="STAFF DETAILS">
                <font>
                   <Font name="Segoe UI" size="25.0" />
                </font>
             </Text>
-            <TableView layoutX="49.0" layoutY="71.0" prefHeight="400.0" prefWidth="1000.0">
+            <TableView layoutX="49.0" layoutY="71.0" prefHeight="400.0" prefWidth="1000.0" style="-fx-background-color: white;">
               <columns>
-                <TableColumn prefWidth="75.0" text="Item ID" />
-                <TableColumn prefWidth="223.0" text="Type" />
-                  <TableColumn prefWidth="328.0" text="Name" />
-                  <TableColumn prefWidth="373.0" text="Stored" />
+                <TableColumn prefWidth="110.0" text="Staff ID" />
+                <TableColumn prefWidth="200.0" text="First Name" />
+                  <TableColumn prefWidth="200.0" text="Surname" />
+                  <TableColumn prefWidth="150.0" text="Salary" />
+                  <TableColumn minWidth="0.0" prefWidth="134.0" text="Position" />
+                  <TableColumn minWidth="0.0" prefWidth="205.0" text="Status" />
               </columns>
             </TableView>
             <Button layoutX="941.0" layoutY="524.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="108.0" style="-fx-background-color: #f22424;" text="DELETE">
@@ -147,7 +143,7 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </Button>
-            <Button layoutX="49.0" layoutY="524.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="166.0" style="-fx-background-color: #FFFFFF;" text="ADD ITEM">
+            <Button layoutX="49.0" layoutY="524.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="166.0" style="-fx-background-color: #FFFFFF;" text="ADD STAFF">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
@@ -157,7 +153,7 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </Button>
-            <Button layoutX="947.0" layoutY="24.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="101.0" style="-fx-background-color: #FFFFFF;" text="REFRESH">
+            <Button layoutX="948.0" layoutY="24.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="101.0" style="-fx-background-color: #FFFFFF;" text="REFRESH">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
