--- a/src/ui/authentication/login_page.fxml
+++ b/src/ui/authentication/login_page.fxml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.Bloom?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.authentication.login_pageController">
    <children>
       <Text fill="#5b3815" layoutX="113.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DASHBOARD">
          <effect>
@@ -49,7 +44,7 @@
                   <Font name="Segoe UI Bold" size="17.0" />
                </font>
             </Text>
-            <Button layoutX="480.0" layoutY="436.0" mnemonicParsing="false" prefWidth="315.0" style="-fx-background-color: #ffffff;" text="Sign In" textFill="#5b3815">
+            <Button fx:id="signIn" layoutX="480.0" layoutY="436.0" mnemonicParsing="false" onAction="#clickSignIn" prefWidth="315.0" style="-fx-background-color: #ffffff;" text="Sign In" textFill="#5b3815">
                <font>
                   <Font name="Segoe UI Bold" size="20.0" />
                </font>
