--- a/src/ui/home/home.fxml
+++ b/src/ui/home/home.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.finances.financesController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.staff.staffController">
    <top>
       <AnchorPane prefHeight="115.0" prefWidth="1280.0" BorderPane.alignment="CENTER">
          <children>
@@ -19,15 +19,20 @@
                   <Font name="Consolas" size="45.0" />
                </font>
             </Text>
-            <Button fx:id="logout" layoutX="1190.0" layoutY="35.0" mnemonicParsing="false" onAction="#clickLogout" text="LOGOUT" />
+            <Button layoutX="1190.0" layoutY="35.0" mnemonicParsing="false" text="LOGOUT" />
          </children>
       </AnchorPane>
    </top>
    <left>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="200.0" prefWidth="193.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
          <children>
             <Pane prefHeight="140.0" prefWidth="203.0" style="-fx-background-color: #b89d82;">
                <children>
+                  <ImageView fitHeight="81.0" fitWidth="77.0" layoutX="61.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../Images/avatar.png" />
+                     </image>
+                  </ImageView>
                   <Text fill="WHITE" layoutX="55.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Admin Panel">
                      <font>
                         <Font name="Segoe UI Bold" size="15.0" />
@@ -38,11 +43,6 @@
                         <Font name="Segoe UI" size="15.0" />
                      </font>
                   </Text>
-                  <ImageView fitHeight="81.0" fitWidth="77.0" layoutX="61.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../Images/avatar.png" />
-                     </image>
-                  </ImageView>
                </children>
             </Pane>
             <Button fx:id="sales" alignment="TOP_CENTER" layoutX="2.0" layoutY="231.0" mnemonicParsing="false" onAction="#clickSales" prefHeight="25.0" prefWidth="200.0" style="-fx-background-color: white;" text="SALES">
@@ -123,19 +123,37 @@
    <center>
       <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #2b2b2b;" BorderPane.alignment="CENTER">
          <children>
-            <Text fill="WHITE" layoutX="49.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="FINANCES">
+            <Text fill="WHITE" layoutX="49.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="STAFF DETAILS">
                <font>
                   <Font name="Segoe UI" size="25.0" />
                </font>
             </Text>
-            <TableView layoutX="49.0" layoutY="71.0" prefHeight="400.0" prefWidth="600.0">
+            <TableView layoutX="49.0" layoutY="71.0" prefHeight="400.0" prefWidth="1000.0" style="-fx-background-color: white;">
               <columns>
-                <TableColumn prefWidth="200.0" text="Date" />
-                <TableColumn prefWidth="200.0" text="Income" />
-                  <TableColumn prefWidth="199.0" text="Expenses" />
+                <TableColumn prefWidth="110.0" text="Staff ID" />
+                <TableColumn prefWidth="200.0" text="First Name" />
+                  <TableColumn prefWidth="200.0" text="Surname" />
+                  <TableColumn prefWidth="150.0" text="Salary" />
+                  <TableColumn minWidth="0.0" prefWidth="134.0" text="Position" />
+                  <TableColumn minWidth="0.0" prefWidth="205.0" text="Status" />
               </columns>
             </TableView>
-            <Button fx:id="refresh" layoutX="948.0" layoutY="24.0" mnemonicParsing="false" onAction="#clickRefresh" prefHeight="39.0" prefWidth="101.0" style="-fx-background-color: #FFFFFF;" text="REFRESH">
+            <Button layoutX="941.0" layoutY="524.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="108.0" style="-fx-background-color: #f22424;" text="DELETE">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Button>
+            <Button layoutX="49.0" layoutY="524.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="166.0" style="-fx-background-color: #FFFFFF;" text="ADD STAFF">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Button>
+            <Button layoutX="800.0" layoutY="524.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="119.0" style="-fx-background-color: #FFFFFF;" text="EDIT">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Button>
+            <Button layoutX="948.0" layoutY="24.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="101.0" style="-fx-background-color: #FFFFFF;" text="REFRESH">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
