--- a/src/ui/sales/sales.fxml
+++ b/src/ui/sales/sales.fxml
@@ -19,7 +19,7 @@
                   <Font name="Consolas" size="45.0" />
                </font>
             </Text>
-            <Button layoutX="1190.0" layoutY="35.0" mnemonicParsing="false" text="LOGOUT" />
+            <Button fx:id="logout" layoutX="1190.0" layoutY="35.0" mnemonicParsing="false" onAction="#clickLogout" text="LOGOUT" />
          </children>
       </AnchorPane>
    </top>
@@ -150,17 +150,17 @@
                   <TableColumn prefWidth="134.0" text="Item Price" />
               </columns>
             </TableView>
-            <Button layoutX="941.0" layoutY="524.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="108.0" style="-fx-background-color: #f22424;" text="DELETE">
+            <Button fx:id="delete" layoutX="941.0" layoutY="524.0" mnemonicParsing="false" onAction="#clickDelete" prefHeight="39.0" prefWidth="108.0" style="-fx-background-color: #f22424;" text="DELETE">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Button>
-            <Button layoutX="49.0" layoutY="524.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="166.0" style="-fx-background-color: #FFFFFF;" text="ADD SALES">
+            <Button fx:id="addSales" layoutX="49.0" layoutY="524.0" mnemonicParsing="false" onAction="#clickAddSales" prefHeight="39.0" prefWidth="166.0" style="-fx-background-color: #FFFFFF;" text="ADD SALES">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Button>
-            <Button layoutX="800.0" layoutY="524.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="119.0" style="-fx-background-color: #FFFFFF;" text="EDIT">
+            <Button fx:id="edit" layoutX="800.0" layoutY="524.0" mnemonicParsing="false" onAction="#clickEdit" prefHeight="39.0" prefWidth="119.0" style="-fx-background-color: #FFFFFF;" text="EDIT">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
@@ -170,7 +170,7 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </Button>
-            <Button layoutX="948.0" layoutY="24.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="101.0" style="-fx-background-color: #FFFFFF;" text="REFRESH">
+            <Button fx:id="refresh" layoutX="948.0" layoutY="24.0" mnemonicParsing="false" onAction="#clickRefresh" prefHeight="39.0" prefWidth="101.0" style="-fx-background-color: #FFFFFF;" text="REFRESH">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
