--- a/src/ui/staff/staff.fxml
+++ b/src/ui/staff/staff.fxml
@@ -19,7 +19,7 @@
                   <Font name="Consolas" size="45.0" />
                </font>
             </Text>
-            <Button layoutX="1190.0" layoutY="35.0" mnemonicParsing="false" text="LOGOUT" />
+            <Button fx:id="logout" layoutX="1190.0" layoutY="35.0" mnemonicParsing="false" onAction="#clickLogout" text="LOGOUT" />
          </children>
       </AnchorPane>
    </top>
@@ -138,22 +138,22 @@
                   <TableColumn minWidth="0.0" prefWidth="205.0" text="Status" />
               </columns>
             </TableView>
-            <Button layoutX="941.0" layoutY="524.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="108.0" style="-fx-background-color: #f22424;" text="DELETE">
+            <Button fx:id="delete" layoutX="941.0" layoutY="524.0" mnemonicParsing="false" onAction="#clickDelete" prefHeight="39.0" prefWidth="108.0" style="-fx-background-color: #f22424;" text="DELETE">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Button>
-            <Button layoutX="49.0" layoutY="524.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="166.0" style="-fx-background-color: #FFFFFF;" text="ADD STAFF">
+            <Button fx:id="addStaff" layoutX="49.0" layoutY="524.0" mnemonicParsing="false" onAction="#clickAddStaff" prefHeight="39.0" prefWidth="166.0" style="-fx-background-color: #FFFFFF;" text="ADD STAFF">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Button>
-            <Button layoutX="800.0" layoutY="524.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="119.0" style="-fx-background-color: #FFFFFF;" text="EDIT">
+            <Button fx:id="edit" layoutX="800.0" layoutY="524.0" mnemonicParsing="false" onAction="#clickEdit" prefHeight="39.0" prefWidth="119.0" style="-fx-background-color: #FFFFFF;" text="EDIT">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Button>
-            <Button layoutX="948.0" layoutY="24.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="101.0" style="-fx-background-color: #FFFFFF;" text="REFRESH">
+            <Button fx:id="refresh" layoutX="948.0" layoutY="24.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="101.0" style="-fx-background-color: #FFFFFF;" text="REFRESH">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
