FXML modal buttons are functional now, slightly changed home

--- a/src/ui/home/home.fxml
+++ b/src/ui/home/home.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
@@ -123,41 +124,20 @@
    <center>
       <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #2b2b2b;" BorderPane.alignment="CENTER">
          <children>
-            <Text fill="WHITE" layoutX="49.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="STAFF DETAILS">
-               <font>
-                  <Font name="Segoe UI" size="25.0" />
-               </font>
-            </Text>
-            <TableView layoutX="49.0" layoutY="71.0" prefHeight="400.0" prefWidth="1000.0" style="-fx-background-color: white;">
-              <columns>
-                <TableColumn prefWidth="110.0" text="Staff ID" />
-                <TableColumn prefWidth="200.0" text="First Name" />
-                  <TableColumn prefWidth="200.0" text="Surname" />
-                  <TableColumn prefWidth="150.0" text="Salary" />
-                  <TableColumn minWidth="0.0" prefWidth="134.0" text="Position" />
-                  <TableColumn minWidth="0.0" prefWidth="205.0" text="Status" />
-              </columns>
-            </TableView>
-            <Button layoutX="941.0" layoutY="524.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="108.0" style="-fx-background-color: #f22424;" text="DELETE">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Button>
-            <Button layoutX="49.0" layoutY="524.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="166.0" style="-fx-background-color: #FFFFFF;" text="ADD STAFF">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Button>
-            <Button layoutX="800.0" layoutY="524.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="119.0" style="-fx-background-color: #FFFFFF;" text="EDIT">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Button>
             <Button layoutX="948.0" layoutY="24.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="101.0" style="-fx-background-color: #FFFFFF;" text="REFRESH">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Button>
+            <LineChart layoutX="14.0" layoutY="77.0">
+              <xAxis>
+                <CategoryAxis side="BOTTOM" />
+              </xAxis>
+              <yAxis>
+                <NumberAxis side="LEFT" />
+              </yAxis>
+            </LineChart>
+            <PieChart layoutX="563.0" layoutY="77.0" />
          </children>
       </Pane>
    </center>
