--- a/src/ui/delete_modal.fxml
+++ b/src/ui/delete_modal.fxml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="400.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="400.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.delete_modalController">
    <children>
       <Text fill="RED" layoutX="47.0" layoutY="69.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Are you sure?">
          <font>
@@ -18,12 +16,12 @@
             <Font size="20.0" />
          </font>
       </Text>
-      <Button layoutX="47.0" layoutY="181.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="113.0" text="CANCEL">
+      <Button fx:id="cancel" layoutX="47.0" layoutY="181.0" mnemonicParsing="false" onAction="#clickCancel" prefHeight="38.0" prefWidth="113.0" text="CANCEL">
          <font>
             <Font size="15.0" />
          </font>
       </Button>
-      <Button layoutX="240.0" layoutY="181.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="113.0" style="-fx-background-color: #f22424;" text="DELETE">
+      <Button fx:id="delete" layoutX="240.0" layoutY="181.0" mnemonicParsing="false" onAction="#clickDelete" prefHeight="38.0" prefWidth="113.0" style="-fx-background-color: #f22424;" text="DELETE">
          <font>
             <Font size="15.0" />
          </font>
