--- a/src/ui/staff/add_staff.fxml
+++ b/src/ui/staff/add_staff.fxml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.staff.add_staffController">
    <children>
       <Text layoutX="240.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ADD STAFF">
          <font>
@@ -55,12 +49,12 @@
             <Font name="Segoe UI" size="15.0" />
          </font>
       </MenuButton>
-      <Button layoutX="372.0" layoutY="357.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="166.0" style="-fx-background-color: #000000;" text="ADD STAFF" textFill="WHITE">
+      <Button fx:id="addStaff" layoutX="372.0" layoutY="357.0" mnemonicParsing="false" onAction="#clickAddStaff" prefHeight="30.0" prefWidth="166.0" style="-fx-background-color: #000000;" text="ADD STAFF" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Button>
-      <Button layoutX="67.0" layoutY="357.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="166.0" style="-fx-background-color: #000000;" text="CANCEL" textFill="WHITE">
+      <Button fx:id="cancel" layoutX="67.0" layoutY="357.0" mnemonicParsing="false" onAction="#clickCancel" prefHeight="30.0" prefWidth="166.0" style="-fx-background-color: #000000;" text="CANCEL" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
