--- a/src/ui/inventory/edit_item.fxml
+++ b/src/ui/inventory/edit_item.fxml
@@ -2,8 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -11,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.inventory.edit_itemController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.inventory.add_itemController">
    <children>
       <Text layoutX="240.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EDIT ITEM">
          <font>
@@ -28,18 +26,6 @@
             <Font size="15.0" />
          </font>
       </TextField>
-      <MenuButton layoutX="67.0" layoutY="186.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="202.0" text="Location">
-         <items>
-            <MenuItem mnemonicParsing="false" text="Barista" />
-            <MenuItem mnemonicParsing="false" text="Cashier" />
-            <MenuItem mnemonicParsing="false" text="Sales" />
-            <MenuItem mnemonicParsing="false" text="Social Media" />
-            <MenuItem mnemonicParsing="false" text="Operations" />
-         </items>
-         <font>
-            <Font name="Segoe UI" size="15.0" />
-         </font>
-      </MenuButton>
       <Button fx:id="done" layoutX="372.0" layoutY="357.0" mnemonicParsing="false" onAction="#clickDone" prefHeight="30.0" prefWidth="166.0" style="-fx-background-color: #000000;" text="DONE" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
@@ -50,6 +36,26 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Button>
+      <TextField layoutX="67.0" layoutY="185.0" prefHeight="31.0" prefWidth="202.0" promptText="Stored">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </TextField>
+      <TextField layoutX="67.0" layoutY="244.0" prefHeight="31.0" prefWidth="202.0" promptText="Purschase Cost">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </TextField>
+      <TextField layoutX="336.0" layoutY="185.0" prefHeight="31.0" prefWidth="202.0" promptText="Vendor">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </TextField>
+      <TextField layoutX="336.0" layoutY="244.0" prefHeight="31.0" prefWidth="202.0" promptText="Buy Count">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </TextField>
       <ComboBox layoutX="67.0" layoutY="124.0" prefHeight="31.0" prefWidth="202.0" />
    </children>
 </Pane>
