--- a/src/ui/logistics/logistics.fxml
+++ b/src/ui/logistics/logistics.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
+<?import javafx.scene.control.cell.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
@@ -128,15 +129,29 @@
                   <Font name="Segoe UI" size="25.0" />
                </font>
             </Text>
-            <TableView layoutX="49.0" layoutY="71.0" prefHeight="400.0" prefWidth="1000.0">
+            <TableView fx:id="table" layoutX="49.0" layoutY="71.0" prefHeight="400.0" prefWidth="1000.0">
               <columns>
-                <TableColumn prefWidth="100.0" text="ID" />
-                <TableColumn prefWidth="100.0" text="Staff ID" />
-                  <TableColumn prefWidth="150.0" text="Customer Name" />
-                  <TableColumn prefWidth="150.0" text="Customer Address" />
-                  <TableColumn prefWidth="200.0" text="Logistics Provider" />
-                  <TableColumn prefWidth="200.0" text="Tracking Number" />
-                  <TableColumn prefWidth="100.0" text="Date Sent" />
+                <TableColumn fx:id="id" prefWidth="100.0" text="ID">
+                   <cellValueFactory><PropertyValueFactory property="id" /></cellValueFactory>
+                </TableColumn>
+                <TableColumn fx:id="staffID" prefWidth="100.0" text="Staff ID">
+                   <cellValueFactory><PropertyValueFactory property="staffID" /></cellValueFactory>
+                </TableColumn>
+                  <TableColumn fx:id="customerName" prefWidth="150.0" text="Customer Name">
+                     <cellValueFactory><PropertyValueFactory property="customerName" /></cellValueFactory>
+                  </TableColumn>
+                  <TableColumn fx:id="customerAddress" prefWidth="150.0" text="Customer Address">
+                     <cellValueFactory><PropertyValueFactory property="customerAddress" /></cellValueFactory>
+                  </TableColumn>
+                  <TableColumn fx:id="logisticsProvider" prefWidth="200.0" text="Logistics Provider">
+                     <cellValueFactory><PropertyValueFactory property="logisticsProvider" /></cellValueFactory>
+                  </TableColumn>
+                  <TableColumn fx:id="trackingNumber" prefWidth="200.0" text="Tracking Number">
+                     <cellValueFactory><PropertyValueFactory property="trackingNumber" /></cellValueFactory>
+                  </TableColumn>
+                  <TableColumn fx:id="dateSent" prefWidth="100.0" text="Date Sent">
+                     <cellValueFactory><PropertyValueFactory property="dateSent" /></cellValueFactory>
+                  </TableColumn>
               </columns>
             </TableView>
             <Button fx:id="delete" layoutX="941.0" layoutY="524.0" mnemonicParsing="false" onAction="#clickDelete" prefHeight="39.0" prefWidth="108.0" style="-fx-background-color: #f22424;" text="DELETE">
