--- a/src/ui/sales/sales.fxml
+++ b/src/ui/sales/sales.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
+<?import javafx.scene.control.cell.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
@@ -128,14 +129,26 @@
                   <Font name="Segoe UI" size="25.0" />
                </font>
             </Text>
-            <TableView layoutX="49.0" layoutY="71.0" prefHeight="400.0" prefWidth="600.0">
+            <TableView fx:id="table" layoutX="49.0" layoutY="71.0" prefHeight="400.0" prefWidth="600.0">
               <columns>
-                <TableColumn prefWidth="90.0" text="ID" />
-                <TableColumn prefWidth="90.0" text="Date" />
-                  <TableColumn prefWidth="90.0" text="Staff ID" />
-                  <TableColumn prefWidth="120.0" text="Customer Name" />
-                  <TableColumn prefWidth="105.0" text="Sales Type" />
-                  <TableColumn prefWidth="105.0" text="Total Sales" />
+                <TableColumn fx:id="id" prefWidth="90.0" text="ID">
+                   <cellValueFactory><PropertyValueFactory property="id" /></cellValueFactory>
+                </TableColumn>
+                <TableColumn fx:id="date" prefWidth="90.0" text="Date">
+                   <cellValueFactory><PropertyValueFactory property="date" /></cellValueFactory>
+                </TableColumn>
+                  <TableColumn fx:id="staffID" prefWidth="90.0" text="Staff ID">
+                     <cellValueFactory><PropertyValueFactory property="staffID" /></cellValueFactory>
+                  </TableColumn>
+                  <TableColumn fx:id="customerName" prefWidth="120.0" text="Customer Name">
+                     <cellValueFactory><PropertyValueFactory property="customerName" /></cellValueFactory>
+                  </TableColumn>
+                  <TableColumn fx:id="salesType" prefWidth="105.0" text="Sales Type">
+                     <cellValueFactory><PropertyValueFactory property="salesType" /></cellValueFactory>
+                  </TableColumn>
+                  <TableColumn fx:id="totalSales" prefWidth="105.0" text="Total Sales">
+                     <cellValueFactory><PropertyValueFactory property="totalSales" /></cellValueFactory>
+                  </TableColumn>
               </columns>
             </TableView>
             <Text fill="WHITE" layoutX="664.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SALES DETAILS">
@@ -143,11 +156,17 @@
                   <Font name="Segoe UI" size="25.0" />
                </font>
             </Text>
-            <TableView layoutX="664.0" layoutY="71.0" prefHeight="400.0" prefWidth="385.0">
+            <TableView fx:id="table2" layoutX="664.0" layoutY="71.0" prefHeight="400.0" prefWidth="385.0">
               <columns>
-                <TableColumn prefWidth="125.0" text="ID" />
-                <TableColumn prefWidth="125.0" text="Item Name" />
-                  <TableColumn prefWidth="134.0" text="Item Price" />
+                <TableColumn fx:id="id2" prefWidth="125.0" text="ID">
+                   <cellValueFactory><PropertyValueFactory property="id" /></cellValueFactory>
+                </TableColumn>
+                <TableColumn fx:id="itemName" prefWidth="125.0" text="Item Name">
+                   <cellValueFactory><PropertyValueFactory property="itemName" /></cellValueFactory>
+                </TableColumn>
+                  <TableColumn prefWidth="134.0" text="Item Price">
+                     <cellValueFactory><PropertyValueFactory property="itemPrice" /></cellValueFactory>
+                  </TableColumn>
               </columns>
             </TableView>
             <Button fx:id="delete" layoutX="941.0" layoutY="524.0" mnemonicParsing="false" onAction="#clickDelete" prefHeight="39.0" prefWidth="108.0" style="-fx-background-color: #f22424;" text="DELETE">
