Bunch of stuff(2)

--- a/src/ui/finances/finances.fxml
+++ b/src/ui/finances/finances.fxml
@@ -129,7 +129,7 @@
                   <Font name="Segoe UI" size="25.0" />
                </font>
             </Text>
-            <TableView fx:id="table" layoutX="49.0" layoutY="71.0" prefHeight="400.0" prefWidth="450.0">
+            <TableView fx:id="table" layoutX="49.0" layoutY="71.0" onMouseClicked="#onClick" prefHeight="400.0" prefWidth="450.0">
               <columns>
                 <TableColumn fx:id="date" prefWidth="150.0" text="Date">
                    <cellValueFactory><PropertyValueFactory property="date" /></cellValueFactory>
