--- a/src/ui/sales/sales.fxml
+++ b/src/ui/sales/sales.fxml
@@ -129,7 +129,7 @@
                   <Font name="Segoe UI" size="25.0" />
                </font>
             </Text>
-            <TableView fx:id="table" layoutX="49.0" layoutY="71.0" prefHeight="400.0" prefWidth="600.0">
+            <TableView fx:id="table" layoutX="49.0" layoutY="71.0" onMouseClicked="#onClick" prefHeight="400.0" prefWidth="600.0">
               <columns>
                 <TableColumn fx:id="id" prefWidth="90.0" text="ID">
                    <cellValueFactory><PropertyValueFactory property="id" /></cellValueFactory>
@@ -164,7 +164,7 @@
                 <TableColumn fx:id="itemName" prefWidth="125.0" text="Item Name">
                    <cellValueFactory><PropertyValueFactory property="itemName" /></cellValueFactory>
                 </TableColumn>
-                  <TableColumn prefWidth="134.0" text="Item Price">
+                  <TableColumn fx:id="itemPrice" prefWidth="134.0" text="Item Price">
                      <cellValueFactory><PropertyValueFactory property="itemPrice" /></cellValueFactory>
                   </TableColumn>
               </columns>
@@ -184,7 +184,7 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </Button>
-            <Button layoutX="234.0" layoutY="524.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="166.0" style="-fx-background-color: #FFFFFF;" text="ADD ITEM">
+            <Button fx:id="addItem" layoutX="234.0" layoutY="524.0" mnemonicParsing="false" onAction="#clickAddItem" prefHeight="39.0" prefWidth="166.0" style="-fx-background-color: #FFFFFF;" text="ADD ITEM">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
